--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,13 @@ gap: 40px;
     background: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
+    background-image: linear-gradient(to bottom,
+                rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office.jpg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: auto;
 }
 
 .hero-title {
@@ -135,6 +142,7 @@ gap: 40px;
         color: #fff;
         max-width: 496px;
         margin: 0 auto 48px auto;
+        
 }
 
 
