--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,7 @@ gap: 24px;
         letter-spacing: 0.02em;
         text-align: center;
         color: #434455;
+        margin-bottom: 8px;
         
 }
 
@@ -269,6 +270,35 @@ gap: 24px;
 background: #fff;  
 border-radius: 0px 0px 4px 4px;
 width: calc((100% - 24px * 3) / 4);
+}
+
+.team-icon {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.team-icon-item {
+    width: 40px;
+    height: 40px;
+}
+
+.team-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.team-link:hover {
+    background-color: #31D0AA;
+}
+
+.team-link-icon {
+    fill: #f4f4fd;
 }
 
 /* Our Portfolio */
