--- a/css/styles.css
+++ b/css/styles.css
@@ -385,3 +385,11 @@ width: calc((100% - 48px ) / 3);
         color: #f4f4fd;
         max-width: 264px;
 }     
+
+.footer-contact {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+}
