--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,9 @@ img {
 
 .header {
 border-bottom: 1px solid #e7e9fc;
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .wrapper {
@@ -69,6 +72,7 @@ color: #2e2f42;
     padding-top: 24px;
         padding-bottom: 24px;
         display: block;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav {   
@@ -94,6 +98,7 @@ margin-right: auto;
 .header-contacts-item {
 display: flex;
 gap: 40px;
+
 }
 
 .header-contacts {
@@ -109,6 +114,7 @@ gap: 40px;
         letter-spacing: 0.02em;
         color: #434455;
         font-style: normal;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contacts-list:hover,
