--- a/css/styles.css
+++ b/css/styles.css
@@ -134,9 +134,10 @@ gap: 40px;
                 rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
             url(../images/people-office.jpg);
+            max-width: 1440px;
             background-repeat: no-repeat;
             background-position: center;
-            background-size: auto;
+            background-size: cover;
 }
 
 .hero-title {
@@ -166,7 +167,7 @@ gap: 40px;
      min-width: 169px;
      min-height: 56px;
      border: none;
-
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
