--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,11 @@ color: #2e2f42;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.header-menu-studio {
+    position: relative;
+    color: #404bbf;
+}
+
 .header-nav {   
 
 }
