--- a/css/styles.css
+++ b/css/styles.css
@@ -75,10 +75,7 @@ color: #2e2f42;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-menu-studio {
-    position: relative;
-    color: #404bbf;
-}
+
 
 .header-nav {   
 
@@ -87,6 +84,22 @@ color: #2e2f42;
 .header-menu-item:hover,
 .header-menu-item:focus {
     color: #404bbf;
+}
+
+.current {
+    position: relative;
+    color: #404bbf;
+}
+
+.current::after {
+    content: "";
+        width: 100%;
+        position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 
 .header-menu {
@@ -132,7 +145,7 @@ gap: 40px;
 
 /*---------------- Effective Solutions ----------------*/
 .hero {
-    background: #2e2f42;
+    /* background: #2e2f42; */
     padding-top: 188px;
     padding-bottom: 188px;
     background-image: linear-gradient(to bottom,
@@ -405,3 +418,4 @@ width: calc((100% - 48px ) / 3);
         letter-spacing: 0.02em;
         color: #fff;
 }
+
