--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,9 @@ gap: 24px;
 background: #fff;  
 border-radius: 0px 0px 4px 4px;
 width: calc((100% - 24px * 3) / 4);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-icon {
@@ -316,10 +319,12 @@ width: calc((100% - 24px * 3) / 4);
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-link:hover {
-    background-color: #31D0AA;
+.team-link:hover,
+.team-link:focus {
+    background-color: #404bbf;
 }
 
 .team-link-icon {
