--- a/css/styles.css
+++ b/css/styles.css
@@ -388,7 +388,7 @@ width: calc((100% - 48px ) / 3);
 .footer {
     background-color: #2e2f42;
     padding-top: 100px;
-        padding-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 .footer-logo {
@@ -422,5 +422,18 @@ width: calc((100% - 48px ) / 3);
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #fff;
+        margin-bottom: 16px;
 }
 
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-container-info {
+margin-right: 120px;
+}
+
+.footer-container-icon {
+    
+}
