--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,7 @@ gap: 40px;
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
+            margin: 0 auto;
 }
 
 .hero-title {
@@ -434,6 +435,11 @@ width: calc((100% - 48px ) / 3);
 margin-right: 120px;
 }
 
-.footer-container-icon {
-    
+.footer-container-icon .team-icon {
+  gap: 16px;  
+}
+
+.footer-link:hover,
+.footer-link:focus {
+background-color: #31d0aa;
 }
