--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,17 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         overflow: hidden;
 }
 
+.skills-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
+
 .skills {
     padding-top: 120px;
     padding-bottom: 120px;
