--- a/css/styles.css
+++ b/css/styles.css
@@ -374,14 +374,19 @@ width: calc((100% - 48px ) / 3);
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+        transform: translateY(0%);
+}
 
 .portfolio-element {
     position: relative;
     overflow: hidden;
 }
 
-.overlay-tex {
+.overlay-text {
     position: absolute;
     top: 0;
     padding: 40px 32px;
@@ -396,11 +401,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-        transform: translateY(0%);
+.overlay-tex:hover {
 }
 
 .portfolio-item-wrapper {
