--- a/css/styles.css
+++ b/css/styles.css
@@ -374,7 +374,7 @@ width: calc((100% - 48px ) / 3);
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover {
+.portfolio-item:hover .overlay-tex {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -387,8 +387,10 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-text {
+    font-weight: 400;
     position: absolute;
     top: 0;
+    left: 0;
     padding: 40px 32px;
         font-size: 16px;
         line-height: 1.5;
@@ -399,9 +401,6 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         width: 100%;
         transform: translateY(100%);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.overlay-tex:hover {
 }
 
 .portfolio-item-wrapper {
