--- a/css/styles.css
+++ b/css/styles.css
@@ -380,7 +380,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .overlay-tex {
+.portfolio-item:hover .overlay-text {
 transform: translateY(0%);
 }
 
@@ -390,10 +390,8 @@ transform: translateY(0%);
 }
 
 .overlay-text {
-    font-weight: 400;
     position: absolute;
     top: 0;
-    left: 0;
     padding: 40px 32px;
         font-size: 16px;
         line-height: 1.5;
